log
Wed, May 14, 2025  8:20:11 AM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:13: error: implicit declaration of function 'addNode' [-Werror=implicit-function-declaration]
             addNode(list, new_node);
             ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  8:20:28 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
023ae84
Wed, May 14, 2025  8:22:41 AM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
7a4a428
Wed, May 14, 2025  8:33:47 AM: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a0ae6d1
